--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -12,4 +12,5 @@ python_classes = Test*
 python_functions = test_*
 markers =
    configure: Test on configuration module
+   simulator : Test on simulator module
    tools : Test on tools module
