Add CTA  scheduler and test

--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -11,6 +11,7 @@ python_files = test_*
 python_classes = Test*
 python_functions = test_*
 markers =
-   configure: Test on configuration module
+   configure : Test on configuration module
+   scheduler : Test on scheduler module
    simulator : Test on simulator module
    tools : Test on tools module
