--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -13,5 +13,6 @@ python_functions = test_*
 markers =
    configure : Test on configuration module
    scheduler : Test on scheduler module
+   scripts   : Test on scripts
    simulator : Test on simulator module
-   tools : Test on tools module
+   tools     : Test on tools module
